Updated codes for heart_disease_prediction project

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,23 @@
-<!-- users/templates/users/home.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'styles_home.css' %}">
 </head>
 <body>
-    <h1>Heart Disease Predictor</h1>
-
-    <p> "Heart Disease Predictor" </p>
-    <p><a href="{% url 'login' %}">Login</a> <br> OR <a href="{% url 'register' %}">Register</a></p>
+    <div class="container">
+        <h1>Heart Disease Predictor</h1>
+        <p class="description">Welcome to the Heart Disease Predictor, your tool for assessing the risk of heart disease.</p>
+        <div class="links">
+            <p>
+                <a href="{% url 'login' %}" class="btn">Login</a>
+                <span>OR</span>
+                <a href="{% url 'register' %}" class="btn">Register</a>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
