--- a/templates/users/patient_entry.html
+++ b/templates/users/patient_entry.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('https://images.unsplash.com/photo-1581091012189-1d373b0f68f2'); /* Medical-themed image */
+            background-image: url('https://img.freepik.com/free-photo/top-view-doctor-desktop-with-stethoscope-clipboard-with-medical-records-form-computer-laptop_1421-698.jpg'); /* Medical-themed image */
             background-size: cover;
             background-position: center;
         }
