Your commit message describing the changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,7 @@
         <h1>Heart Disease Predictor</h1>
         <p>Empowering Health Decisions for a Better Tomorrow</p>
         <a href="{% url 'login' %}" class="btn">Login</a>
-        <a href="{% url 'register' %}" class="btn btn-secondary">Create Account</a>
+        <a href="{% url 'register' %}" class="btn btn-secondary">Register</a>
     </div>
 </body>
 </html>
