--- a/templates/users/history.html
+++ b/templates/users/history.html
@@ -7,6 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-image: url('/static/images/medical_records.jpg'); 
             background-color: #f4f7f6;
             margin: 0;
             padding: 0;
